--- a/akta/templates/akta.html
+++ b/akta/templates/akta.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% block content %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,82 +15,82 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&family=Pacifico&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'fontawsome/css/all.min.css' %}">
+
     <title>My Kids - Akta</title>
     <style>
-        .font {
-            font-family: 'Balsamiq Sans', cursive;
-        }
-        .navbar {
-            background-color: #FFEB94;
-        }
-        .btn {
-            background-color: #FFEB94;
-            width: 50%;
-        }
-        #akta {
-            margin-top: 20px;
-        }
-    </style>
+      .font {
+          font-family: 'Balsamiq Sans', cursive;
+      }
+      .navbar {
+          background-color: #FFEB94;
+      }
+      .btn {
+          background-color: #FFEB94;
+          width: 100%;
+      }
+      #akta {
+          margin-top: 20px;
+      }
+  </style>
   </head>
   <body class="font">
-
+    
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">MY KIDS</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'index' %}">Beranda</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'akta' %}">Akta</a>
-              </li>
+      <div class="container">
+        <a class="navbar-brand" href="#">MY KIDS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url 'index' %}">Beranda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'akta' %}">Akta</a>
+            </li>
+        </div>
+      </div>
+    </nav>
+
+    <!-- AKTA -->
+    <section id="akta">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-10">
+
+            <h3>Akta Kelahiran</h3>
+
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Nomor Pendaftaran</th>
+                  <th scope="col">Nama Anak</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Detail</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  {% for akta in akta %}
+                  <td>{{akta.slug}}</td>
+                  <td>{{akta.nama_anak}}</td>
+                  <td>{{akta.status}}</td>
+                  <td><a href="{% url 'detail' slug=akta.slug %}" class="btn">Detail</a></td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+
           </div>
         </div>
-      </nav>
+      </div>
+    </section>
 
-      <!-- AKTA -->
-      <section id="akta">
-          <div class="container">
-              <div class="row">
-                  <div class="col md-10">
+    {% endblock %}
 
-                    
-
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Nama</th>
-                                    <th>Nama Ayah</th>
-                                    <th>Nama Ibu</th>
-                                    <th>Detail</th>
-                                </tr>
-                            </thead>
-                            
-                            <tbody>
-                                {% for akta in akta %}
-                                <tr>
-                                    
-                                    <td>{{ akta.nama_anak }}</td>
-                                    <td> {{akta.nama_ayah}} </td>
-                                    <td> {{akta.nama_ibu}} </td>
-                                    <td> <a href="#" class="btn">Detail</a> </td>
-                                </tr>
-                            </tbody>
-                        </table>
-
-                    {% endfor %}
-
-                  </div>
-              </div>
-          </div>
-      </section>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
