--- a/akta/templates/create.html
+++ b/akta/templates/create.html
@@ -61,18 +61,67 @@
 
                     <form>
 
+                      <h3>Data Pelapor</h3>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label class="form-label">Nama Pelapor</label>
+                                    {{form.nama_pelapor}}
+                                  </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label class="form-label">Nomor KK Pelapor</label>
+                                    {{form.no_kk_pelapor}}
+                                  </div>
+                            </div>
+                        </div><div class="row">
+                          <div class="col-md-6">
+                              <div class="mb-3">
+                                  <label class="form-label">NIK Kepala Keluarga Pelapor</label>
+                                  {{form.nik_kepala_keluarga_pelapor}}
+                                </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="mb-3">
+                                  <label class="form-label">NIK Pelapor</label>
+                                  {{form.nik_pelapor}}
+                                </div>
+                          </div>
+                          <div class="mb-3">
+                            <label class="form-label">Hubungan Keluarga</label>
+                            {{form.hubungan_keluarga}}
+                          </div>
+                      </div> <br><br>
+
+                      <h3>Data Keluarga</h3>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label class="form-label">Nomor Kartu Keluarga</label>
+                                    {{form.no_kk}}
+                                  </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label class="form-label">NIK Kepala Keluarga</label>
+                                    {{form.nik_kepala_keluarga}}
+                                  </div>
+                            </div>
+                        </div> <br><br>
+
                         <H3>Data Anak</H3>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Nama Anak</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nama_anak}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">NIK Anak</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nik_anak}}
                                   </div>
                             </div>
                         </div>
@@ -80,13 +129,13 @@
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Nomor KK</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nomor_kk}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label class="form-label">Jenis Kelamin</label>
-                                    <input type="text" class="form-control">
+                                    <label class="form-label">Anak Ke</label>
+                                    {{form.anak_ke}}
                                   </div>
                             </div>
                         </div>
@@ -94,29 +143,85 @@
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Tempat Lahir</label>
-                                    <input type="text" class="form-control">
+                                    {{form.tempat_lahir}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Tanggal Lahir</label>
-                                    <input type="text" class="form-control">
+                                    {{form.tgl_lahir}}
                                   </div>
                             </div>
-                        </div> <br> <br>
+                        </div>
+                        <div class="row">
+                          <div class="col-md-6">
+                              <div class="mb-3">
+                                  <label class="form-label">Jam</label>
+                                  {{form.jam}}
+                                </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="mb-3">
+                                  <label class="form-label">Berat Badan</label>
+                                  {{form.berat_badan}}
+                                </div>
+                          </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label class="form-label">Tinggi Badan</label>
+                                {{form.tinggi_badan}}
+                              </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label class="form-label">Rumah Sakit</label>
+                                {{form.rumah_sakit}}
+                              </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                          <div class="mb-3">
+                              <label class="form-label">Penolong Kelahiran</label>
+                              {{form.penolong_kelahiran}}
+                            </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="mb-3">
+                              <label class="form-label">Agama</label>
+                              {{form.agama}}
+                            </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label class="form-label">Jenis Kelamin</label>
+                            {{form.jenis_kelamin}}
+                          </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label class="form-label">Jenis Kelahiran</label>
+                            {{form.jenis_kelahiran}}
+                          </div>
+                    </div>
+                </div> <br> <br>
 
                         <h3>Data Ayah</h3>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Nama Ayah</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nama_ayah}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">NIK Ayah</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nik_ayah}}
                                   </div>
                             </div>
                         </div> <br><br>
@@ -126,13 +231,13 @@
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Nama Ibu</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nama_ibu}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">NIK Ibu</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nik_ibu}}
                                   </div>
                             </div>
                         </div> <br><br>
@@ -142,13 +247,13 @@
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">Nama Saksi</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nama_saksi}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">NIK Saksi</label>
-                                    <input type="text" class="form-control">
+                                    {{form.nik_saksi}}
                                   </div>
                             </div>
                         </div> <br><br>
@@ -157,48 +262,44 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label class="form-label">Surat Bukti Kelahiran</label>
-                                    <input type="file" class="form-control">
+                                    <label class="form-label">Surat Kelahiran</label> <br>
+                                    {{form.surat_kelahiran}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label class="form-label">Surat Pengantar Kelahiran</label>
-                                    <input type="file" class="form-control">
+                                    <label class="form-label">Akta Nikah</label> <br>
+                                    {{form.akta_nikah}}
+                                  </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                              <div class="mb-3">
+                                <label class="form-label">Kartu Keluarga</label> <br>
+                                {{form.kk}}
+                            </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label class="form-label">KTP Ayah</label> <br>
+                                    {{form.ktp_ayah}}
                                   </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label class="form-label">Akta Nikah</label>
-                                    <input type="file" class="form-control">
+                                    <label class="form-label">KTP Ibu</label> <br>
+                                    {{form.ktp_ibu}}
                                   </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label class="form-label">Kartu Keluarga</label>
-                                    <input type="file" class="form-control">
+                                    <label class="form-label">KTP Saksi</label> <br>
+                                    {{form.ktp_saksi}}
                                   </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label class="form-label">KTP Ayah</label>
-                                    <input type="file" class="form-control">
-                                  </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label class="form-label">KTP Ibu</label>
-                                    <input type="file" class="form-control">
-                                  </div>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">KTP Saksi</label>
-                            <input type="file" class="form-control">
                         </div> <br>
 
 
@@ -216,18 +317,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
-
-  <!-- BAYI
-  NIK BAYI, NAMA BAYI, NO KK, JENIS KELAMIN, TEMPAT, LAHIR TANGAL LAHIR
-
-  AYAH
-  NAMA NIK
-
-  IBU
-  NAMA NIK
-
-  SAKSI 1
-  NAMA NIK
-
-  DOKUMEN
-  SURAT BUKTI KELAHIRAN, SURAT PENGANTAR KELAHIRAN, AKTA NIKAH, KK, KTP ORTU, KTP SAKSI, -->
