--- a/akta/templates/create.html
+++ b/akta/templates/create.html
@@ -164,7 +164,7 @@
                           <div class="col-md-6">
                               <div class="mb-3">
                                   <label class="form-label">Berat Badan</label>
-                                  {{form.berat_badan}}
+                                  {{form.bb}}
                                 </div>
                           </div>
                       </div>
@@ -172,7 +172,7 @@
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label class="form-label">Tinggi Badan</label>
-                                {{form.tinggi_badan}}
+                                {{form.tb}}
                               </div>
                         </div>
                         <div class="col-md-6">
