--- a/akta/templates/detail.html
+++ b/akta/templates/detail.html
@@ -114,11 +114,11 @@
                 </tr>
                 <tr>
                   <th scope="row">Berat Badan</th>
-                  <td>{{akta.berat_badan}}</td>
+                  <td>{{akta.bb}}</td>
                 </tr>
                 <tr>
                   <th scope="row">Tinggi Badan</th>
-                  <td>{{akta.tinggi_badan}}</td>
+                  <td>{{akta.tb}}</td>
                 </tr>
                 <tr>
                   <th scope="row">Status</th>
