--- a/akta/templates/detail.html
+++ b/akta/templates/detail.html
@@ -114,11 +114,11 @@
                 </tr>
                 <tr>
                   <th scope="row">Berat Badan</th>
-                  <!-- <td>{{akta.bb}}</td> -->
+                  <td>{{akta.berat}}</td>
                 </tr>
                 <tr>
                   <th scope="row">Tinggi Badan</th>
-                  <!-- <td>{{akta.tb}}</td> -->
+                  <td>{{akta.tinggi}}</td>
                 </tr>
                 <tr>
                   <th scope="row">Status</th>
