--- a/akta/templates/detail.html
+++ b/akta/templates/detail.html
@@ -114,11 +114,11 @@
                 </tr>
                 <tr>
                   <th scope="row">Berat Badan</th>
-                  <td>{{akta.berat}}</td>
+                  <td>{{akta.berat}} kg</td>
                 </tr>
                 <tr>
                   <th scope="row">Tinggi Badan</th>
-                  <td>{{akta.tinggi}}</td>
+                  <td>{{akta.tinggi}} cm</td>
                 </tr>
                 <tr>
                   <th scope="row">Status</th>
