--- a/templates/index.html
+++ b/templates/index.html
@@ -100,8 +100,9 @@
                   <div class="col-md-6 align-self-center">
                     <h1 class="text-center"><i class="fas fa-user"></i></h1>
               <h3 class="text-center">Tentang Kami</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore quia nulla, ratione perferendis blanditiis sunt. Impedit sit odit esse maiores. Quo cupiditate minima ipsa laborum alias reprehenderit magni quae rem!
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, quisquam? Quisquam voluptate repudiandae laboriosam laborum debitis accusamus inventore, doloremque corporis omnis in minima nobis itaque adipisci commodi non quis delectus?
+              <p>Website ini dibuat oleh seorang remaja yang bernama Al Azhar. Lahir di Surabaya tanggal 24 Agustus 2003 dari seorang ibu yang memiliki suami yang memilki mertua dan saudara. Ia berumur 17 tahun bergender laki-laki dan masih lajang.
+                Hobinya adalah berenang, mendengarkan musik, tidur, makan, dan yang paling ia suka tidak lain dan tidak bukan halu. Apalagi ketika ia berhalu ke jogja sendiri. itu salah satu impiannnya. Saya seorang pelajar yang sekolah di Sekolah Menengah Kejuruan Negeri 4 Kota Malang. Saya sendiri kelas 11 yang mengikuti jurusan rekayasa perangkat lunak. Berhubung saya dikasih tugas akhir sama salah satu guru saya,
+                yaudah saya bikin website ini. Seharusnya disini masih ada beberapa teks, karena saya capek ngetiknya jadi hasilnya sampai disini. Sekian dan terima kasih. Sekali lagi saya ucapkan terima kasih yang sebesar-besarnya dan sebanyak-banyaknya.
               </p>
                   </div>
 
@@ -121,23 +122,23 @@
             <h3 class="text-center">Kelebihan</h3> <br>
             <div class="row">
 
-                <div class="col-md-4">
-                    <h1 class="text-center"><i class="fas fa-database"></i></h1>
-                    <h5 class="text-center">Data Tersimpan Dengan Aman</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore corrupti voluptas vel blanditiis fugiat architecto pariatur iure distinctio vitae, veniam magnam neque consequuntur in, ratione recusandae deleniti aliquam temporibus culpa.</p>
-                  </div>
-    
-                  <div class="col-md-4">
-                    <h1 class="text-center"><i class="fas fa-database"></i></h1>
-                    <h5 class="text-center">Data Tersimpan Dengan Aman</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore corrupti voluptas vel blanditiis fugiat architecto pariatur iure distinctio vitae, veniam magnam neque consequuntur in, ratione recusandae deleniti aliquam temporibus culpa.</p>
-                  </div>
+              <div class="col-md-4">
+                <h1 class="text-center"><i class="fas fa-clock h1"></i></h1>
+                <h5 class="text-center">Menghemat Waktu</h5>
+                <p>Anda dapat menghemat waktu dan tidak membuang waktu ketika membuat akte kelahiran. kini membuat akte kelahiran jadi menyenangkan.</p>
+              </div>
 
-                  <div class="col-md-4">
-                    <h1 class="text-center"><i class="fas fa-database"></i></h1>
-                    <h5 class="text-center">Data Tersimpan Dengan Aman</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore corrupti voluptas vel blanditiis fugiat architecto pariatur iure distinctio vitae, veniam magnam neque consequuntur in, ratione recusandae deleniti aliquam temporibus culpa.</p>
-                  </div>
+              <div class="col-md-4">
+                <h1 class="text-center"><i class="fas fa-shield-alt h1"></i></h1>
+                <h5 class="text-center">Data Tersimpan Dengan Aman</h5>
+                <p>Data yang anda inputkan dijamin sangat aman, pasti aman, harus aman. Membuat anda tidak khawatir atas kebocoran data-data pribadi anda maupun anak anda.</p>
+              </div>
+
+              <div class="col-md-4">
+                <h1 class="text-center"><i class="fas fa-check-circle h1"></i></h1>
+                <h5 class="text-center">Mudah Di Akses</h5>
+                <p>Memudahkan anda dalam membuat akte kelahiran bagi anak anda. Kini anda tidak perlu repot-repot keluar rumah untuk membuat akte kelahiran.</p>
+              </div>
 
             </div>
           </div>
@@ -149,32 +150,23 @@
           <div class="container">
               <div class="row">
 
-                <div class="col-md-4">
-                    <h3 class="text-center">Info Layanan</h3>
-                    <ul class="text-center list">
-                        <li>test</li>
-                        <li>test</li>
-                        <li>test</li>
-                    </ul>
-                </div>
+                <div class="col-md-6">
+                  <h3 class="text-center">Info Layanan</h3>
+                  <ul class="text-center list">
+                      <li><a href="{% url 'visi' %}">Visi Misi</a></li>
+                      <li><a href="{% url 'syarat' %}">Syarat</a></li>
+                      <li> <a href="{% url 'cara' %}">Cara Daftar</a></li>
+                  </ul>
+              </div>
 
-                <div class="col-md-4">
-                    <h3 class="text-center">Info Layanan</h3>
-                    <ul class="text-center list">
-                        <li>test</li>
-                        <li>test</li>
-                        <li>test</li>
-                    </ul>
-                </div>
-
-                <div class="col-md-4">
-                    <h3 class="text-center">Hubungi Kami</h3>
-                    <ul class="text-center list">
-                        <li>Email</li>
-                        <li>Instagram</li>
-                        <li>WhatsApp</li>
-                    </ul>
-                </div>
+              <div class="col-md-4">
+                  <h3 class="text-center">Hubungi Kami</h3>
+                  <ul class="text-center list">
+                    <li><a href="mailto:alazharisqi@gmail.com">Email</a></li>
+                    <li><a href="https://www.instagram.com/zharsuke/">Instagram</a></li>
+                    <li><a href="http://wa.me/0895366608834">WhatsApp</a></li>
+                  </ul>
+              </div>
 
               </div>
           </div>
