--- a/templates/visi.html
+++ b/templates/visi.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&family=Pacifico&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'fontawsome/css/all.min.css' %}">
-    <title>My Kids - Homepage</title> 
+    <title>My Kids - Visi Misi</title> 
 
     <style>
         .font {
@@ -23,7 +23,7 @@
         .navbar {
             background-color: #FFEB94;
         }
-        #jumbotron {
+        #visi {
             background-color: #fff5c6;
             width: 100%;
             height: 100%;
@@ -60,7 +60,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Beranda</a>
+                <a class="nav-link" aria-current="page" href="{% url 'index' %}">Beranda</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#tentang">Tentang Kami</a>
@@ -68,30 +68,33 @@
               <li class="nav-item">
                 <a class="nav-link" href="#kelebihan">Kelebihan</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'akta' %}">Akta</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-              </li>
           </div>
         </div>
       </nav>
 
-      <!-- JUMBOTRON -->
-      <section id="jumbotron">
+      <!-- VISI -->
+      <section id="visi">
           <div class="container">
-              <div class="row">
+              <div class="row justify-content-center">
 
                   <div class="col-md-6">
-                    <img src="{% static 'img/baby.svg' %}" style="height: 100%; width: 100%;" alt="">
-                  </div> 
+                
+                    <h3 class="text-center">Visi Misi</h3>
 
-                  <div class="col-md-6 align-self-center">
-                    <h1>Selamat Datang {{request.user}}!</h1>
-                    <p>Buat akta kelahiran anak anda, di my kids.</p>
-                    <a class="btn" href="{% url 'buat' %}">Buat Akta</a> 
-                  </div>
+                    <h4>Visi</h4>
+            <ul>
+              <li>Menjadikan My Kids sebagai website pembuatan akta kelahiran</li>
+              <li>Menjaga data anda dengan aman</li>
+              <li>Pelayanan Nomor 1</li>
+            </ul>
+            <br>
+            <h4>Misi</h4>
+            <ul>
+              <li>Meningkatkan kualitas website kami</li>
+              <li>Berusaha untuk menjadi yang lebih baik</li>
+            </ul>
+
+                  </div> 
 
               </div>
           </div>
@@ -128,23 +131,23 @@
             <h3 class="text-center">Kelebihan</h3> <br>
             <div class="row">
 
-                <div class="col-md-4">
-                    <h1 class="text-center"><i class="fas fa-clock h1"></i></h1>
-                    <h5 class="text-center">Menghemat Waktu</h5>
-                    <p>Anda dapat menghemat waktu dan tidak membuang waktu ketika membuat akte kelahiran. kini membuat akte kelahiran jadi menyenangkan.</p>
-                  </div>
-    
-                  <div class="col-md-4">
-                    <h1 class="text-center"><i class="fas fa-shield-alt h1"></i></h1>
-                    <h5 class="text-center">Data Tersimpan Dengan Aman</h5>
-                    <p>Data yang anda inputkan dijamin sangat aman, pasti aman, harus aman. Membuat anda tidak khawatir atas kebocoran data-data pribadi anda maupun anak anda.</p>
-                  </div>
+              <div class="col-md-4">
+                <h1 class="text-center"><i class="fas fa-clock h1"></i></h1>
+                <h5 class="text-center">Menghemat Waktu</h5>
+                <p>Anda dapat menghemat waktu dan tidak membuang waktu ketika membuat akte kelahiran. kini membuat akte kelahiran jadi menyenangkan.</p>
+              </div>
 
-                  <div class="col-md-4">
-                    <h1 class="text-center"><i class="fas fa-check-circle h1"></i></h1>
-                    <h5 class="text-center">Mudah Di Akses</h5>
-                    <p>Memudahkan anda dalam membuat akte kelahiran bagi anak anda. Kini anda tidak perlu repot-repot keluar rumah untuk membuat akte kelahiran.</p>
-                  </div>
+              <div class="col-md-4">
+                <h1 class="text-center"><i class="fas fa-shield-alt h1"></i></h1>
+                <h5 class="text-center">Data Tersimpan Dengan Aman</h5>
+                <p>Data yang anda inputkan dijamin sangat aman, pasti aman, harus aman. Membuat anda tidak khawatir atas kebocoran data-data pribadi anda maupun anak anda.</p>
+              </div>
+
+              <div class="col-md-4">
+                <h1 class="text-center"><i class="fas fa-check-circle h1"></i></h1>
+                <h5 class="text-center">Mudah Di Akses</h5>
+                <p>Memudahkan anda dalam membuat akte kelahiran bagi anak anda. Kini anda tidak perlu repot-repot keluar rumah untuk membuat akte kelahiran.</p>
+              </div>
 
             </div>
           </div>
@@ -157,22 +160,22 @@
               <div class="row">
 
                 <div class="col-md-6">
-                    <h3 class="text-center">Info Layanan</h3>
-                    <ul class="text-center list">
-                      <li><a href="{% url 'visi' %}">Visi Misi</a></li>
-                      <li><a href="{% url 'syarat' %}">Syarat</a></li>
-                      <li> <a href="{% url 'cara' %}">Cara Daftar</a></li>
-                    </ul>
-                </div>
+                  <h3 class="text-center">Info Layanan</h3>
+                  <ul class="text-center list">
+                    <li><a href="{% url 'visi' %}">Visi Misi</a></li>
+                    <li><a href="{% url 'syarat' %}">Syarat</a></li>
+                    <li> <a href="{% url 'cara' %}">Cara Daftar</a></li>
+                  </ul>
+              </div>
 
-                <div class="col-md-4">
-                    <h3 class="text-center">Hubungi Kami</h3>
-                    <ul class="text-center list">
-                      <li><a href="mailto:alazharisqi@gmail.com">Email</a></li>
-                      <li><a href="https://www.instagram.com/zharsuke/">Instagram</a></li>
-                      <li><a href="http://wa.me/0895366608834">WhatsApp</a></li>
-                    </ul>
-                </div>
+              <div class="col-md-4">
+                  <h3 class="text-center">Hubungi Kami</h3>
+                  <ul class="text-center list">
+                    <li><a href="mailto:alazharisqi@gmail.com">Email</a></li>
+                    <li><a href="https://www.instagram.com/zharsuke/">Instagram</a></li>
+                    <li><a href="http://wa.me/0895366608834">WhatsApp</a></li>
+                  </ul>
+              </div>
 
               </div>
           </div>
